Sun Feb 22 21:43:34 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (ruby_float_step): extracted from num_step().

	* range.c (range_step): uses ruby_float_step() for float range.
	  [ruby-dev:37691]

Sun Feb 22 00:49:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): does not use both of makefile.rb and
	  extconf.rb at the same time.

	* lib/mkmf.rb (DLLIB): depends on Makefile.  [ruby-core:21096]

Sun Feb 22 00:19:05 2009  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_thread_schedule): Don't change status of threads which
	  don't run next even if select notify readability/writability.
	  [ruby-core:20446]

Fri Feb 20 20:43:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser::List#summarize): gives priority
	  to latter switches.  [ruby-dev:36692]

	* lib/optparse.rb (OptionParser#summarize): do not append
	  unnecessary line terminator.

Fri Feb 20 19:35:08 2009  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/session.rb: ignore session_id options fixed.[Bug #605]

Fri Feb 20 18:06:40 2009  James Edward Gray II  <jeg2@ruby-lang.org>

	Merged 20854 from trunk.

	* lib/xmlrpc/server.rb:  Restricting method inspection to show only
	  non-inherited public methods.  [ruby-core:20603]

	* lib/xmlrpc/server.rb:  Fixing method inspection so it doesn't 
	  trigger XMLRPC::FaultException when used.  [ruby-core:20604]

Fri Feb 20 01:41:08 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/sync.rb (Sync_m#sync_try_lock): wrong variable name fixed.
	  a patch from [ruby-core:20561]

	* lib/sync.rb (Sync_m::Err.Fail): turn off Thread.critical before
	  exit.

Thu Feb 19 18:02:10 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* pack.c (pack_pack): fixed odd act of 'm*', 'M*', and 'P*'.
	  just ignores '*' in these cases.
	  [ruby-dev:37289]

Thu Feb 19 17:26:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_pack): fixed length for odd length string.
	  [ruby-dev:37283]
